# effective-polars

./: .gitignore  README.md  pyproject.toml
notebooks/: chpt2.ipynb  effective-polars-book.ipynb  getting-started.ipynb
src/effective_polars/: utils.py
