[tool.poetry]
name = "effective-polars"
version = "0.1.0"
description = ""
authors = ["Matej <matouhrin@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
