[tool.poetry]
name = "effective-polars"
version = "0.1.0"
description = ""
authors = ["Matej <matouhrin@gmail.com>"]
readme = "README.md"
packages = [
       { include = "effective_polars", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.15"
ipykernel = "^6.29.3"
pyarrow = "^15.0.1"
pandas = "^2.2.1"
jinja2 = "^3.1.3"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
